<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.tjiang11.tcrunch.TeacherLoginFragment">

    <!-- TODO: Update blank fragment layout -->

    
    
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">
        
        <android.support.design.widget.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:hint="@string/enter_email"
            android.support.design:hintEnabled="true"
            android:textAlignment="center"/>
        
    </android.support.design.widget.TextInputLayout>
    



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_password"
            android.support.design:hintEnabled="true"
            android:textAlignment="center"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/sign_in"
        android:textSize="15sp"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite" />
    <Button
        android:layout_centerHorizontal="true"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/register"
        android:textSize="15sp"
        android:layout_marginTop="195dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
