<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.toniebalonie.tjiang11.tcrunch.TeacherTicketListActivity"
    tools:showIn="@layout/app_bar_main">
    <RelativeLayout
        android:id="@+id/loadingPanelTeacher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/ticket_list_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/no_class_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_class_text"/>

    <TextView
        android:id="@+id/no_ticket_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/class_has_no_tickets"/>

    <TextView
        android:id="@+id/class_deleted_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/class_deleted"/>

</RelativeLayout>
